fix: Data Alert modal from notification feed showing behind DM

--- a/src/components/Notifications/NotificationFeed/NotificationFeed.scss
+++ b/src/components/Notifications/NotificationFeed/NotificationFeed.scss
@@ -62,6 +62,10 @@
 }
 .react-autoql-notification-message-input {
   width: 100%;
+
+  textarea {
+    width: 100% !important;
+  }
 }
 
 // Set delay per List Item
